--- a/Projects/Network/Network.vcxproj
+++ b/Projects/Network/Network.vcxproj
@@ -122,7 +122,7 @@ if exist Src\*.inl    xcopy /D /F /I /R /Y Src\*.inl    ..\..\Include\Network</C
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>if exist Src\*.h    xcopy /D /F /I /R /Y Src\*.h    ..\Include\Network</Command>
+      <Command>if exist Src\*.h    xcopy /D /F /I /R /Y Src\*.h    ..\..\Include\Network</Command>
     </PostBuildEvent>
     <Lib>
       <OutputFile>$(OutDir)$(TargetFileName)</OutputFile>
