--- a/Projects/Core/Core.vcxproj.filters
+++ b/Projects/Core/Core.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="Src\ThreadSync.h">
       <Filter>Src</Filter>
     </ClInclude>
+    <ClInclude Include="Src\Time.h">
+      <Filter>Src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PCH.cpp" />
@@ -70,6 +73,9 @@
       <Filter>Src</Filter>
     </ClCompile>
     <ClCompile Include="Src\Stream.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Time.cpp">
       <Filter>Src</Filter>
     </ClCompile>
   </ItemGroup>
