--- a/Projects/TestConsole/TestConsole.vcxproj
+++ b/Projects/TestConsole/TestConsole.vcxproj
@@ -22,6 +22,7 @@
     <ProjectGuid>{E7FE14D3-CB01-4DA5-B600-32B4A56636FF}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>TestConsole</RootNamespace>
+    <ProjectName>TestConsole</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
