--- a/Projects/TestServer/TestServer.vcxproj
+++ b/Projects/TestServer/TestServer.vcxproj
@@ -22,6 +22,7 @@
     <ProjectGuid>{5726858E-506A-467E-921B-2347BAA83850}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>TestServer</RootNamespace>
+    <ProjectName>TestServer</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
