--- a/Projects/GameCommon/GameCommon.vcxproj
+++ b/Projects/GameCommon/GameCommon.vcxproj
@@ -155,12 +155,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="GameCommon.h" />
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="GameNetworker.h" />
+    <ClInclude Include="PacketBase.h" />
+    <ClInclude Include="PacketProcessor.h" />
+    <ClInclude Include="PacketProtocol.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GameCommon.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameNetworker.cpp" />
+    <ClCompile Include="PacketProcessor.cpp" />
+    <ClCompile Include="PacketProcessor_Handler.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
