--- a/Projects/GameCommon/GameCommon.vcxproj.filters
+++ b/Projects/GameCommon/GameCommon.vcxproj.filters
@@ -2,12 +2,33 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
-    <ClCompile Include="GameCommon.cpp" />
+    <ClCompile Include="GameNetworker.cpp">
+      <Filter>Network</Filter>
+    </ClCompile>
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="PacketProcessor.cpp">
+      <Filter>Network</Filter>
+    </ClCompile>
+    <ClCompile Include="PacketProcessor_Handler.cpp">
+      <Filter>Network</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="GameCommon.h" />
+    <ClInclude Include="GameNetworker.h">
+      <Filter>Network</Filter>
+    </ClInclude>
+    <ClInclude Include="PacketBase.h">
+      <Filter>Network</Filter>
+    </ClInclude>
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="PacketProcessor.h">
+      <Filter>Network</Filter>
+    </ClInclude>
+    <ClInclude Include="PacketProtocol.h">
+      <Filter>Network</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Network">
