--- a/Projects/GameCommon/GameCommon.vcxproj
+++ b/Projects/GameCommon/GameCommon.vcxproj
@@ -93,6 +93,9 @@
       <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
       <GenerateWindowsMetadata>false</GenerateWindowsMetadata>
     </Link>
+    <PostBuildEvent>
+      <Command>if exist *.h    xcopy /D /F /I /R /Y *.h    ..\..\Include\GameCommon</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -155,7 +158,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Game.h" />
+    <ClInclude Include="GameCommon.h" />
     <ClInclude Include="GameNetworker.h" />
     <ClInclude Include="PacketBase.h" />
     <ClInclude Include="PacketProcessor.h" />
@@ -164,7 +167,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameCommon.cpp" />
     <ClCompile Include="GameNetworker.cpp" />
     <ClCompile Include="PacketProcessor.cpp" />
     <ClCompile Include="PacketProcessor_Handler.cpp" />
